<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  >
    
    <ImageView
        android:id="@+id/overlayed_sec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/fantasgo_sec"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/font_image" />
    
    
    <LinearLayout
        android:id="@+id/textviewscon" 
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
                >
        <LinearLayout
        android:id="@+id/lainear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:padding="5dp"
        >
    <EditText
        android:id="@+id/loginfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/loginfields"
        android:background="@drawable/edit_text_custom"
        android:textColor="#000"
        android:textColorHint="#000"
        android:padding="10dp"
        android:maxLength="10"
        android:inputType="phone"
         >
    
    </EditText>
    
    </LinearLayout>
    
   

     <LinearLayout
        android:id="@+id/lainear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
         android:padding="5dp"
        >
         
    
    <EditText
        android:id="@+id/passwordfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_custom"
        android:padding="10dp"
       android:textColor="#000"
       android:textColorHint="#000"
       android:hint="@string/passfields" />
    
    </LinearLayout>
    
     </LinearLayout>
     
     <LinearLayout
         android:id="@+id/botm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:baselineAligned="false"
         android:padding="15dp" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="2dp" >

             <Button
                 android:id="@+id/login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/button"
                 android:text="@string/login"
                 android:textColor="#FFF" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="2dp" >

             <Button
                 android:id="@+id/register"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/button"
                 android:text="@string/registerbtn"
                 android:textColor="#FFF" />
         </LinearLayout>
     </LinearLayout>
     
      <RelativeLayout
          android:id="@+id/spinbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/botm"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="30dp" >

        <com.actionbarsherlock.internal.widget.IcsProgressBar
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
             />

    </RelativeLayout>
    
   
    
</RelativeLayout>
