<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linelayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
         <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        />
         
         <TableLayout
        android:id="@+id/tablelayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:padding="7dp"
        >
    <TableRow
        android:id="@+id/tablerow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >    
            <TextView 
                android:id="@+id/termsandconditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/terms"
                android:textColor="#FFF"
                android:gravity="center"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
	</TableRow>
	
    <TableRow
        android:id="@+id/tablerow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         >
     <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:layout_weight="1"
         android:layout_marginTop="9dp" >

        <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/showingterms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
      	         android:text="@string/showing_terms"
      	         android:textColor="#FFF"
      	          />
            </RelativeLayout>
            </ScrollView>
            </TableRow>
            
   		 <TableRow
   		     android:id="@+id/tablerow3"
   		     android:layout_width="match_parent"
   		     android:layout_height="wrap_content" 
   		     android:layout_marginBottom="11dp"
   		     >
     
   		    
            <CheckBox
                android:id="@+id/acceptcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="#FFF"
                android:layout_weight="1"
                 />
            <Button
     	    android:id="@+id/acceptandcontinue"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:text="@string/Continued" 
     	    android:textColor="#FFF"
     	    android:layout_weight="0"
     	    android:background="@drawable/button"
     	    />
          
            </TableRow>
       
     	
  	   
            
</TableLayout>

</RelativeLayout>